--- a/estilos/principal.css
+++ b/estilos/principal.css
@@ -19,21 +19,20 @@ summary {
   padding: 8px;
 }
 
-
-ul {
+.principal ul {
   list-style-type: disc;
 }
 
-li {
+.principal li {
   padding: 4px;
 }
 
-li a {
+.principal li a {
   background-color: rgba(4, 170, 109, 0.5);
   font-weight: 500;
 }
 
-li:hover {
+.principal li:hover {
   background-color: rgba(4, 170, 109, 0.2);
 }
 
@@ -41,4 +40,8 @@ li:hover {
   border: 1px solid rgb(4, 170, 109);
   margin: 16px 0;
   padding: 8px;
+}
+
+.principal ::marker {
+  color: rgb(4, 170, 109);
 }
