--- a/estilos/principal.css
+++ b/estilos/principal.css
@@ -36,12 +36,6 @@ summary {
   background-color: rgba(4, 170, 109, 0.2);
 }
 
-.atividade {
-  border: 1px solid rgb(4, 170, 109);
-  margin: 16px 0;
-  padding: 8px;
-}
-
 .principal ::marker {
   color: rgb(4, 170, 109);
 }
@@ -52,85 +46,26 @@ summary {
   padding: 8px;
 }
 
+.atividade {
+  border: 1px solid rgb(4, 170, 109);
+  margin: 16px 0;
+  padding: 8px;
+}
+
+code {
+  background-color: rgba(4, 170, 109, 0.3);
+  padding: 1px 3px;
+}
+
 img {
   height: auto;
   max-width: 100%;
 }
 
-/* *** */
-
-table, th, td {
-  border: 1px solid gray;
-  margin-bottom: 30px;
+hr {
+  margin: 40px 0;
 }
 
-.table2, 
-.table3, 
-.table4, 
-.table5, 
-.table6, 
-.table7, 
-.table8, 
-.table9 {
-  border-collapse: collapse;
-}
-
-.table3 td {
-  background-color: powderblue;
-  border: 1px solid white;
-}
-
-.table4 td {
-  border-color: powderblue;
-}
-
-.table5 td:nth-child(odd), 
-.table5 th:nth-child(odd) {
-  background-color: powderblue;
-}
-
-.table6 th {
-  width: 33.33%;
-}
-
-.table6 td {
-  width: 33.33%;
-}
-
-.table7 tr:nth-child(even) {
-  background-color: powderblue;
-}
-
-.table8 tr:hover {
-  background-color: powderblue;
-}
-
-/* *** */
-
-.div-block-inline {
-  background-color: powderblue;
-  margin: 16px 0;
-}
-
-.span-block-inline {
-  background-color: bisque;
-}
-
-/* *** */
-
-.p1 {
-  border-color: coral;
-  border-style: solid;
-  border-width: 5px 20px;
-}
-
-.p2 {
-  border-color: powderblue;
-  border-style: solid;
-  border-width: 20px 5px 5px 30px;
-}
-
-.p3 {
-  border-style: solid;
-  border-color: coral green blue brown;
+li {
+  padding: 8px 0;
 }
