--- a/estilos/principal.css
+++ b/estilos/principal.css
@@ -7,7 +7,6 @@ body {
 }
 
 details {
-  border: 1px solid rgb(4, 170, 109);
   margin: 16px 0;
   padding: 8px;
 }
@@ -16,6 +15,12 @@ summary {
   background-color: rgb(4, 170, 109);
   color: white;
   font-weight: 500;
+  padding: 8px;
+}
+
+div.materia {
+  border: 1px solid rgb(4, 170, 109);
+  margin: 16px 0;
   padding: 8px;
 }
 
