--- a/assets/principal.css
+++ b/assets/principal.css
@@ -7,6 +7,7 @@ body {
 }
 
 details {
+  border: 1px solid rgb(4, 170, 109);
   margin: 16px 0;
   padding: 8px;
 }
@@ -14,13 +15,8 @@ details {
 summary {
   background-color: rgb(4, 170, 109);
   color: white;
+  cursor: pointer;
   font-weight: 500;
-  padding: 8px;
-}
-
-div.materia {
-  border: 1px solid rgb(4, 170, 109);
-  margin: 16px 0;
   padding: 8px;
 }
 
@@ -49,12 +45,6 @@ div.materia {
 
 .principal ::marker {
   color: rgb(4, 170, 109);
-}
-
-.notas {
-  background-color: rgba(4, 170, 109, 0.2);
-  margin: 16px 0;
-  padding: 8px;
 }
 
 .atividade {
