--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -66,7 +66,7 @@ div.materia {
   border-bottom: 1px solid black;
   display: flex;
   flex-direction: column;
-  height: 92vh;
+  height: 90vh;
   padding: 160px 8px;
   text-align: center;
   width: 100%;
@@ -75,14 +75,6 @@ div.materia {
 div.materia p {
   line-height: 2;
   margin-bottom: 48px;
-}
-
-div.materia .numeros {
-  border: 1px solid black;
-  border-radius: 50%;
-  font-size: 2em;
-  margin-right: 8px;
-  padding: 8px 16px;
 }
 
 /* MENU LATERAL */
